samples/_failures_safe/1761633815_9b3640_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40a34578.c:131:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  131 | void print_entries_by_level
      | ^~~~
